src/mon/MgrMonitor.cc
@@ -1272,13 +1272,17 @@ out:
   getline(ss, rs);
 
   if (r >= 0) {
+    bool do_update = false;
     if (prefix == "mgr fail" && is_writeable()) {
       propose_pending();
+      do_update = false;
+    } else {
+      do_update = true;
     }
     // success.. delay reply
     wait_for_finished_proposal(op, new Monitor::C_Command(mon, op, r, rs,
 					      get_last_committed() + 1));
-    return true;
+    return do_update;
   } else {
     // reply immediately
     mon.reply_command(op, r, rs, rdata, get_last_committed());
